# ynab-gocardless-sync

./: .coverage  .gitignore  LICENSE.md  README.md  pyproject.toml  pytest.ini  run_tests.py
.cursor/rules/: do-not-update-readme.mdc  use-uv.mdc
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_main.py  test_sync.py
ynab_sync/: __init__.py  __main__.py  api.py  cli.py  config.py  logging_config.py  sync.py
